public/css/style.css
/*handlebars are complete */
:root {
    --primary: #000000;
    --secondary: #9e9e9e;
    --tertiary: #221f25;
    --quatrinary: #ffffff;
    --light: #e3e4e3;
    --dark: #020303;
    --error: rgb(228, 46, 1);
    --border-radius: 0.3rem;
  }
  
  /* SAM has added .center for the hero image class */
  .center {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
  }

  body {
    font-family: Arial;
    margin: 0;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    justify-content: flex-start;
    background-color: var(--quatrinary);
  }
  
  a {
    color: var(--dark);
    text-decoration: none;
  }
  
  a:visited {
    color: inherit;
  }
  
  header {
    padding: 40px;
    text-align: center;
    background: var(--primary);
    color: var(--light);
  }
  
  main {
    display: flex;
    flex-wrap: wrap;
    flex-grow: 1;
  }
  
  aside {
    flex: 0;
    background-color: var(--tertiary);
    padding: 80px;
    text-align: left;
    color: var(--light);
  }
  
  /* nav {
    display: flex;
    background-color: var(--secondary);
  } */
  
  /* nav a {
    color: var(--light);
    padding: 14px 20px;
    text-decoration: none;
    text-align: right;
  } */
  
  /* nav a:hover {
    color: var(--secondary);
    background-color: var(--dark);
  } */
  
  .gallery {
    flex: 4;
    background-color: #fff;
    padding: 50px;
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
  }
  
  .btn-no-style {
    background: none;
    border: none;
    padding: 0;
    cursor: pointer;
    text-decoration: none;
    font-size: 100%;
    transition: color 0.1s;
    margin-left: 16px;
  }
  
  /* img {
    max-width: 100%;
    height: auto;
  } */
  
  /* .details and .animal-details are the CARDS and text of the animal details cards  */ 
  .details {
    width: 50%;
    background-color: white;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    margin-bottom: 25px;
  }
  
  .animal-details {
    text-align: center;
    padding: 10px 20px;
    font-weight: normal;
  }
  
  /* CARDS - Category-details Handlebar - these appear on the homepage */
  .card {
    margin: 20px;
    flex: 0 1 300px;
    border-radius: 10px;
    background-color: var(--light);
    color: var(--dark);
    text-align: center;
    padding: 10px 20px;
    font-weight: light;
  }
  
  .login-card {
    margin-left: auto;
    margin-right: auto;
    flex: 0 0 500%;
    max-width: 200%;
    padding: 10%;
    border: 3px solid var(--dark);
    background-color: #1a2627;
    color: var(--light);
    display: block
  }
  
  .card header {
    color: var(--light);
    font-weight: bold;
    text-transform: uppercase;
    margin: 0;
    background-color: var(--tertiary);
    padding: 0.625rem;
    border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
  }
  
  .card-body {
    font-size: 1.4rem;
    text-align: center;
    font-weight: bold;
  }
  
  .gallery-name {
    text-transform: uppercase;
    letter-spacing: 3px;
    text-shadow: 2px 2px 5px var(--secondary);
    border: 10px groove var(--light);
    padding-top: 30px;
    padding-bottom: 30px;
    padding-right: 100px;
    padding-left: 100px;
  }
  
  /* LAYOUT */
  .container {
    display: flex;
    flex-flow: column wrap;
    align-content: flex-start;
    align-items: center;
  }
  
  /* here onwards relates to homepage */

.buttons {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;
  margin: 3px;
  padding: 5px;
}

.progress {
  margin: 5px;
  padding: 5px;
}

.bar{
  height:27px;
  width:0%;
  background: #ffffff;
  border-left: solid 2px #ffffff;
  margin-bottom:4px;
  transition: width 1s;
  font-weight: bold;
}

.bar-green{
  background:#ffc107;    
  border-color:#ffc107;
}

#CatDog{
text-align: center;
font-weight: bold;
}

.heroImage{
  padding-top: 50px;
  justify-content: center;
}

.center-header{
  display: block;
  margin-left: auto;
  margin-right: auto;
}

